# MoeSekai-Hub

./: .gitignore  README.md  pyproject.toml
.github/workflows/: daily-update.yml  story-asset-daily-update.yml  story-asset-full-update.yml
data/event_bvid/: events_bilibili.json  unmatched_events.json
data/music_alias/: music_aliases.json
data/pjskb30/: cn_chart.csv  jp_chart.csv  merged_chart.csv
guides/: guides-index.json
guides/gacha/: 2025-03-12_stepup-gacha-update.md
mangas/: mangas.json
src/: __init__.py  cli.py
src/common/: __init__.py  http.py  io.py
src/tasks/: __init__.py  b30_csv.py  event_bvid.py  manga.py  music_alias.py  music_meta.py  story_asset.py  story_asset_urls.json  story_summary.py
story/detail/: event_001.json  event_002.json  event_003.json  event_004.json  event_005.json  event_006.json  event_007.json  event_008.json  event_009.json  event_010.json  event_011.json  event_012.json  event_013.json  event_014.json  event_015.json  event_016.json  event_017.json  event_018.json  event_019.json  event_020.json  event_021.json  event_022.json  event_023.json  event_024.json  event_025.json  event_026.json  event_027.json  event_028.json  event_029.json  event_030.json  event_031.json  event_032.json  event_033.json  event_034.json  event_035.json  event_036.json  event_037.json  (+161 more)
tests/: test_b30_csv.py  test_event_bvid.py  test_manga.py  test_music_alias.py  test_music_meta.py  test_story_asset.py  test_story_summary.py
translation/: characters.json  comic.json  events.json  gacha.json  music.json  mysekai.json  virtualLive.json
(+22802 files in other folders)
